library/common/include/virgil/crypto/common/vsc_str_buffer.h

    typedef struct vsc_str_buffer_t vsc_str_buffer_t;
//
//  Allocate context and perform it's initialization.
//
VSC_PUBLIC vsc_str_buffer_t *
vsc_str_buffer_new(void);
//
//  Allocate class context and perform it's initialization.
//  Allocate inner character buffer of given capacity.
//
VSC_PUBLIC vsc_str_buffer_t *
vsc_str_buffer_new_with_capacity(size_t capacity);
//
//  Allocate class context and perform it's initialization.
//  Allocate inner character buffer as copy of given string.
//
VSC_PUBLIC vsc_str_buffer_t *
vsc_str_buffer_new_with_str(vsc_str_t str);
//
//  Release all inner resources and deallocate context if needed.
//  It is safe to call this method even if the context was statically allocated.
//
VSC_PUBLIC void
vsc_str_buffer_delete(const vsc_str_buffer_t *self);
//
//  Returns true if string length is zero.
//
VSC_PUBLIC bool
vsc_str_buffer_is_empty(const vsc_str_buffer_t *self);
//
//  Return true if strings are equal.
//
VSC_PUBLIC bool
vsc_str_buffer_equal(const vsc_str_buffer_t *self, const vsc_str_buffer_t *rhs);
//
//  Perform constant-time string comparison.
//  The time depends on the string length but not on the characters.
//  Return true if strings are equal.
//
VSC_PUBLIC bool
vsc_str_buffer_secure_equal(const vsc_str_buffer_t *self, const vsc_str_buffer_t *rhs);
//
//  Allocates inner characters array with a given capacity.
//  Precondition: characters array is initialized.
//  Precondition: characters array does not hold any character.
//  Postcondition: inner characters array is allocated.
//
VSC_PUBLIC void
vsc_str_buffer_alloc(vsc_str_buffer_t *self, size_t capacity);
//
//  Release inner characters array.
//
VSC_PUBLIC void
vsc_str_buffer_release(vsc_str_buffer_t *self);
//
//  Use given characters array as underlying string buffer.
//  Precondition: buffer is initialized.
//  Precondition: buffer does not hold any characters array.
//  Note, caller is responsible for given characters array deallocation.
//
VSC_PUBLIC void
vsc_str_buffer_use(vsc_str_buffer_t *self, char *chars, size_t chars_len);
//
//  Take given characters array as underlying string buffer.
//  Precondition: buffer is initialized.
//  Precondition: buffer does not hold any characters array.
//  Note, this class is responsible for given characters array deallocation.
//
VSC_PUBLIC void
vsc_str_buffer_take(vsc_str_buffer_t *self, char *chars, size_t chars_len, vsc_dealloc_fn dealloc_cb);
//
//  Mark string buffer as it holds sensitive data that must be erased
//  in a secure manner during destruction.
//
VSC_PUBLIC void
vsc_str_buffer_make_secure(vsc_str_buffer_t *self);
//
//  Returns true if string buffer is full.
//
VSC_PUBLIC bool
vsc_str_buffer_is_full(const vsc_str_buffer_t *self);
//
//  Returns true if string buffer is configured and has valid internal states.
//
VSC_PUBLIC bool
vsc_str_buffer_is_valid(const vsc_str_buffer_t *self);
//
//  Returns underlying characters array.
//
VSC_PUBLIC const char *
vsc_str_buffer_chars(const vsc_str_buffer_t *self);
//
//  Returns underlying string buffer characters as string.
//
VSC_PUBLIC vsc_str_t
vsc_str_buffer_str(const vsc_str_buffer_t *self);
//
//  Returns underlying string buffer characters as data.
//
VSC_PUBLIC vsc_data_t
vsc_str_buffer_data(const vsc_str_buffer_t *self);
//
//  Returns string buffer capacity.
//
VSC_PUBLIC size_t
vsc_str_buffer_capacity(const vsc_str_buffer_t *self);
//
//  Returns string buffer effective length - length of characters that are actually used.
//
VSC_PUBLIC size_t
vsc_str_buffer_len(const vsc_str_buffer_t *self);
//
//  Returns length of the characters array that are not in use yet.
//
VSC_PUBLIC size_t
vsc_str_buffer_unused_len(const vsc_str_buffer_t *self);
//
//  Returns writable pointer to the string buffer first element.
//
VSC_PUBLIC char *
vsc_str_buffer_begin(vsc_str_buffer_t *self);
//
//  Returns pointer to the first unused character in the string buffer.
//
VSC_PUBLIC char *
vsc_str_buffer_unused_chars(vsc_str_buffer_t *self);
//
//  Increase used characters by given length.
//
VSC_PUBLIC void
vsc_str_buffer_inc_used(vsc_str_buffer_t *self, size_t len);
//
//  Decrease used characters by given length.
//
VSC_PUBLIC void
vsc_str_buffer_dec_used(vsc_str_buffer_t *self, size_t len);
//
//  Copy char to the string buffer.
//
VSC_PUBLIC void
vsc_str_buffer_write_char(vsc_str_buffer_t *self, char ch);
//
//  Copy string to the string buffer.
//
VSC_PUBLIC void
vsc_str_buffer_write_str(vsc_str_buffer_t *self, vsc_str_t str);
//
//  Append char to the string buffer and reallocate if needed by coping.
//
//  Precondition: string buffer should be an owner of the underlying characters array.
//
//  Note, this operation can be slow if copy operation occurred.
//  Note, string buffer capacity is doubled.
//
VSC_PUBLIC void
vsc_str_buffer_append_char(vsc_str_buffer_t *self, char ch);